--- a/index.html
+++ b/index.html
@@ -7,11 +7,14 @@
   <iframe id="clip_frame" style="width: 800px; height: 400px;"></iframe>
 
   <script type="text/javascript">
+    // Define your parent domains
+    var parentDomains = ['github.io'];
+
     // Define the clip slug as a variable
     var clipSlug = "ScaryObservantKimchiMingLee-Xrtjzt4vuET2Q1Ex";
 
     // Build the src URL for the iframe
-    var srcUrl = "https://clips.twitch.tv/embed?clip=" + clipSlug;
+    var srcUrl = "https://clips.twitch.tv/embed?clip=" + clipSlug + "&parent=" + parentDomains.join('&parent=');
 
     // Set the iframe's src attribute with the built URL
     document.getElementById('clip_frame').setAttribute('src', srcUrl);
