--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <script type="text/javascript">
     // Define your parent domains
-    var parentDomains = ['github.io'];
+    var parentDomains = ['anime37.github.io'];
 
     // Define the clip slug as a variable
     var clipSlug = "ScaryObservantKimchiMingLee-Xrtjzt4vuET2Q1Ex";
