--- a/index.html
+++ b/index.html
@@ -3,15 +3,26 @@
 
 <head>
     <title>Twitch Clip Player</title>
+    <style>
+        #clip_container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+        }
+    </style>
 </head>
 
 <body>
-    <!-- Create an empty iframe with an ID -->
-    <iframe id="clip_frame" style="width: 800px; height: 400px;"></iframe>
+    <div id="clip_container">
+        <!-- Create an empty iframe with an ID -->
+        <iframe id="clip_frame" style="width: 800px; height: 400px;"></iframe>
 
-    <!-- Add an input field and a button for the user to input a new clip slug -->
-    <input type="text" id="newClipSlug" placeholder="Enter A Clip Slug">
-    <button onclick="updateClipSlug()">Update Clip</button>
+        <!-- Add an input field and a button for the user to input a new clip slug -->
+        <input type="text" id="newClipSlug" placeholder="Enter a Clip Slug">
+        <button onclick="updateClipSlug()">Update Clip</button>
+    </div>
 
     <script type="text/javascript">
         // Define your parent domains
