--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
             document.getElementById('clip_frame').setAttribute('src', srcUrl);
         }
 
-        // Reload the page every 30 seconds (30000 milliseconds)
+        // Reload after clip finishes playing
         setInterval(function () {
             location.reload();
-        }, 30000);
+        }, 32000);
     </script>
 </body>
 
