--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
                     var clipSlug = event.target.result.trim(); // Remove leading/trailing white space
 
                     if (clipSlug) {
+                        // Store the file name or identifier in a browser cookie
+                        document.cookie = "clipFile=" + encodeURIComponent(file.name);
+
                         // Get the initial reload time
                         var initialReloadTime = document.getElementById('reloadTime').value || 30000; // Default reload time: 30 seconds
 
@@ -64,6 +67,33 @@
             var srcUrl = "https://clips.twitch.tv/embed?clip=" + slug + "&autoplay=true&parent=" + parentDomains.join('&parent=');
             document.getElementById('clip_frame').setAttribute('src', srcUrl);
         }
+
+        // Check if a file name or identifier is stored in the browser cookie
+        function getStoredClipFile() {
+            var name = "clipFile=";
+            var decodedCookie = decodeURIComponent(document.cookie);
+            var cookieArray = decodedCookie.split(';');
+
+            for (var i = 0; i < cookieArray.length; i++) {
+                var cookie = cookieArray[i].trim();
+                if (cookie.indexOf(name) === 0) {
+                    return cookie.substring(name.length);
+                }
+            }
+            return "";
+        }
+
+        // On page load, check for a stored file and load it if found
+        window.onload = function () {
+            var storedClipFile = getStoredClipFile();
+            if (storedClipFile) {
+                // Load the corresponding file if available
+                var fileInput = document.getElementById('fileInput');
+                fileInput.value = ''; // Clear any previously selected file to avoid issues with browsers not triggering 'change' event when selecting the same file
+                fileInput.files = [new File([""], storedClipFile)];
+                startClipRotation();
+            }
+        };
     </script>
 </body>
 
