--- a/future_test.html
+++ b/future_test.html
@@ -1,51 +1,29 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Embed Twitch Clip</title>
-</head>
-<body>
-  <!-- Create an empty iframe with an ID -->
-  <iframe id="clip_frame" style="width: 800px; height: 400px;"></iframe>
+  <head>
+      <script>
+          let fileHandle;
+          async function selectFile() {
+              [fileHandle] = await window.showOpenFilePicker();
+              let filenameDiv = document.getElementById('filenameDiv');
+              filenameDiv.innerHTML = fileHandle.name;
+              readFile();
+          };
 
-  <script type="text/javascript">
-    // Define your parent domains
-    var parentDomains = ['anime37.github.io'];
-
-    // Define your Bearer token
-    var bearerToken = 'YOUR_BEARER_TOKEN'; // Replace with your actual Bearer token
-
-    // Function to fetch the clipSlug from an API
-    function fetchClipSlug() {
-      fetch('https://example.com/api/getClipSlug', {
-        headers: {
-          'Authorization': 'Bearer ' + bearerToken
-        }
-      })
-        .then(function(response) {
-          return response.json();
-        })
-        .then(function(data) {
-          // Use the fetched clipSlug
-          var clipSlug = data.clipSlug;
-
-          // Build the src URL for the iframe
-          var srcUrl = "https://clips.twitch.tv/embed?clip=" + clipSlug + "&parent=" + parentDomains.join('&parent=');
-
-          // Set the iframe's src attribute with the built URL
-          document.getElementById('clip_frame').setAttribute('src', srcUrl);
-        })
-        .catch(function(error) {
-          console.error('Error fetching clipSlug:', error);
-        });
-    }
-
-    // Fetch the clipSlug initially
-    fetchClipSlug();
-
-    // Reload the page every 30 seconds
-    setInterval(function() {
-      location.reload();
-    }, 30000);
-  </script>
-</body>
+          async function readFile() {
+              const file = await fileHandle.getFile();
+              const contents = await file.text();
+              let outputDiv = document.getElementById('outputDiv');
+              outputDiv.innerHTML = contents;
+          }
+      </script>
+  </head>
+  <body>
+      <div style="margin: 20px;">
+          <p><button onclick="selectFile()">Choose template file</button></p>
+          <p><button onclick="readFile()">Reload</button></p>
+          <div id="filenameDiv" style="background: #fff;"></div>
+      </div>
+      <div id="outputDiv" style="background: #fff; min-height: 100px;"></div>
+  </body>
 </html>
